k8s/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtapi-be
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dtapi
        tier: backend
    spec:
      containers:
      - image: eu.gcr.io/test1-286117/dtapi-be:latest
        name: dtapi
        ports:
        - containerPort: 80
          name: dtapi
        readinessProbe:
          httpGet:
            path: /api/
            port: 80
        livenessProbe:
          httpGet:
            path: /api/
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
