k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtapi-mysql
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dtapi
        tier: mysql
    spec:
      containers:
      - image: eu.gcr.io/test1-286117/dtapi-mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
          subPath: data
      volumes:
      - name: mysql-persistent-storage
        gcePersistentDisk:
          pdName: dtapi-mysql
