k8s/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-be
  labels:
    app: dtapi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dtapi
    tier: backend
  type: NodePort
