k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-mysql
  labels:
    app: dtapi
spec:
  ports:
    - port: 3306
  selector:
    app: dtapi
    tier: mysql
  clusterIP: None
