k8s/fe-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-fe
  labels:
    app: dtapi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dtapi
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtapi-fe
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dtapi
        tier: frontend
    spec:
      containers:
        - image: eu.gcr.io/test1-286117/dtapi-fe:latest
          name: dtapi
          ports:
            - containerPort: 80
              name: dtapi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
