k8s/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-fe
  labels:
    app: dtapi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dtapi
    tier: frontend
  type: NodePort
