k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dtapi-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: dtapi
    # Add managed certificate
    networking.gke.io/managed-certificates: dtapi-cerf
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: dtapi-be
          servicePort: 80
      - path: /*
        backend:
          serviceName: dtapi-fe
          servicePort: 80
